--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "repository": "https:///github.com/cilt-uct/fallback-capture-agent",
   "author": "Duncan Smith (@slampunk)",
   "dependencies": {
-    "hoek": "^5.0.3",
-    "hawk": "^7.0.0",
     "dotenv": "^5.0.0",
     "express": "^4.16.0",
+    "hawk": "^7.0.0",
+    "hoek": "^5.0.3",
     "mkdirp": "0.5.1",
     "request": "2.87.0",
     "request-digest": "1.0.10",
-    "socket.io": "^2.1.1"
+    "socket.io": "^2.1.1",
+    "xml": "^1.0.1",
+    "xml2js": "^0.4.19"
   }
 }
