--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "repository": "https:///github.com/cilt-uct/fallback-capture-agent",
   "author": "Duncan Smith (@slampunk)",
   "dependencies": {
+    "archiver": "^3.0.0",
     "dotenv": "^5.0.0",
     "express": "^4.16.0",
     "hawk": "^7.0.0",
