Working version of the fallback recorder ingestion

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "hoek": "^5.0.3",
     "mkdirp": "0.5.1",
     "request": "2.87.0",
-    "request-digest": "1.0.10",
+    "request-digest": "^1.0.13",
+    "shelljs": "0.8.3",
     "socket.io": "^2.1.1",
     "xml": "^1.0.1",
     "xml2js": "^0.4.19"
