--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "shelljs": "0.8.3",
     "socket.io": "^2.1.1",
     "xml": "^1.0.1",
-    "xml2js": "^0.4.19"
+    "xml2js": "^0.4.19",
+    "winston": "3.2.1"
   }
 }
